# gemma-4-mtp

./: .gitignore  NOTICE  README.md  pyproject.toml
docs/: findings.md
scripts/: brute_force_o_proj.py  brute_force_v.py  compare_attention_parity.py  compare_internal_tflite_runtime.py  compare_o_proj_bins.py  compare_quantized_attention_parity.py  compare_teacher_forced_blocks.py  compare_tflite_runtime.py  dump_sg.py  export_partial_state_dict.py  extract_linear_plan.py  fetch_artifacts.py  found_bug.py  inspect_attention_runtime.py  inspect_constants.py  inspect_drafter.py  inspect_sg3.py  inspect_tflite_quantization.py  probe_k_layout.py  probe_v_layout.py  run_tflite_inference.py  search_window_mapping.py  smoke_test.py  solve_o_proj.py  sweep_runtime_parity.py
src/gemma_mtp/: __init__.py  config.py  convert.py  graph.py  module.py  plan.py  runtime_attention.py  tflite_loader.py
